--- a/Angular/accounting/src/app/screen/dispaly/account-ledger/account-ledger.html
+++ b/Angular/accounting/src/app/screen/dispaly/account-ledger/account-ledger.html
@@ -1,4 +1,4 @@
-<mat-card (click)="focusRow(activeIndex)">
+<mat-card (click)="focusRow(activeIndex)" style="padding-bottom: 10px;">
   <mat-card-header>
    <span style="font-weight: bold;">Account : {{Account_name}}</span>
   </mat-card-header>
