--- a/Angular/accounting/src/app/screen/transaction1/accounting-table.scss
+++ b/Angular/accounting/src/app/screen/transaction1/accounting-table.scss
@@ -53,7 +53,10 @@ mat-form-field {
 }
 
 ::ng-deep .mat-mdc-text-field-wrapper {
-  padding: 0;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 ::ng-deep .mat-mdc-form-field-infix {
@@ -63,7 +66,7 @@ mat-form-field {
 
 /* Summary Section */
 .summary-section {
-  /* background: #f5f5f5; */
+  background: #f5f5f5;
   padding: 20px;
   border-radius: 8px;
   margin-bottom: 20px;
