--- a/Angular/accounting/src/app/screen/transation/transation.html
+++ b/Angular/accounting/src/app/screen/transation/transation.html
@@ -2,36 +2,73 @@
    <mat-card class="mat-card-width">
       <mat-card-header>
          <!-- {{router.url.substring(1).toUpperCase()}} -->
-         {{voucher_type | titlecase}}
+      <mat-card-title>
+         {{Voucher_label | titlecase}}
+      </mat-card-title> 
       </mat-card-header>
-      <mat-card-content style="padding: 0px;">
+      <mat-card-content style="padding: 0px; width: 100%;">
          <form [formGroup]="entryForm">
-            <div style="float: right; margin-bottom: 30px;">
-               <mat-form-field appearance="outline" floatLabel="auto">
+            <div style="float: right; margin-right: 20px; width: 150px;">
+               <mat-form-field floatLabel="auto" appearance="outline">
                   <mat-label>Date</mat-label>
                   <input [formControl]="dateControl" (dateChange)="onDateChange($event)" required matInput
                      [matDatepicker]="picker" />
                   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                   <mat-datepicker #picker></mat-datepicker>
                </mat-form-field>
-
             </div>
-            <div formArrayName="entries" style="max-height: 400px; overflow-y: auto; width: 100%;">
+            <div style="width: 100%; overflow-x: auto; padding: 0px;">
+            <div formArrayName="entries" style="margin-bottom: 10px; border-radius: 10px; padding-top: 10px; max-height: 250px; min-width: 600px; overflow-x: auto;">
+               <!-- <div style="margin-left: 18px; margin-right: 44px;">
+               <table mat-table>
+                   <ng-container matColumnDef="type">
+                     <th mat-header-cell *matHeaderCellDef style="width:17% ">Type</th>
+                     <td mat-cell *matCellDef="let element">
+                     </td>
+                  </ng-container>
+             
+                  <ng-container matColumnDef="account">
+                     <th mat-header-cell *matHeaderCellDef style="width:25% ">Account</th>
+                     <td mat-cell *matCellDef="let element">
+
+                     </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="amount">
+                     <th mat-header-cell *matHeaderCellDef style="width:25% ">Amount</th>
+                     <td mat-cell *matCellDef="let element">
+
+                     </td>
+                  </ng-container>
+
+                  
+                  <ng-container matColumnDef="narration">
+                     <th mat-header-cell *matHeaderCellDef style="width:35% ">Narration</th>
+                     <td mat-cell *matCellDef="let element">
+
+                     </td>
+                  </ng-container>
+
+                 
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+               </table>
+               </div> -->
                @for(entry of entries.controls; track entry.get('id')?.value; )
                {
-               <div style="float: left; width: calc(100% - 45px)">
-                  <div style="padding-right: 10px; padding-top: 25px; float: left;">
+               <div style="float: left; width: calc(100% - 45px);">
+                  <div style="padding-right: 10px; padding-top: 17px; float: left;">
                      {{$index}}
                   </div>
-                  <mat-card appearance="outlined" style="margin-bottom: 5px; padding: 0px; border-radius: 0px;">
+                  <mat-card appearance="outlined" style="margin-bottom: 2px; padding: 0px; border-radius: 0px;">
                      <!-- <mat-card-content style="padding: 0px; padding-bottom: 5px;"> -->
                      <mat-grid-list [formGroupName]="$index" [cols]="layout.totalCols()" rowHeight="45px">
-                        <mat-grid-tile [colspan]="layout.colSpan().colspan_1" [rowspan]="1">
+                        <mat-grid-tile [colspan]="layout.colSpan().colspan_1" [rowspan]="1" >
                            <mat-form-field style="margin-top: 20px;" class="balance-cell">
                               <mat-label>D/C</mat-label>
                               <mat-select [ngClass]="crdr.value == 'credit' ? 'cr' : 'dr' " #crdr
-                                 formControlName="entry_type" (blur)="checkBalanceAndAdd()"
-                                 (selectionChange)="toggleField( $index, crdr.value)">
+                                 formControlName="entry_type" (blur)="checkBalanceAndAdd($index)"
+                                 (selectionChange)="toggleField( $index, crdr.value)" >
                                  <mat-option value="debit">D</mat-option>
                                  <mat-option value="credit">C</mat-option>
                               </mat-select>
@@ -49,11 +86,11 @@
                               }
 
                               <mat-autocomplete requireSelection #auto="matAutocomplete" [displayWith]="displayFn">
-                                 @for (option of filteredLedger; track option.id) {
+                                 @for (option of filteredLedger; track $index) {
                                  @if(option.ledger_type == 2){
-                                 <mat-option [value]="option">{{option.name | titlecase}}&nbsp;<span
-                                       style="color: rgb(2, 90, 197);"> ({{option.group | titlecase}})
-                                    </span></mat-option>
+                                 <mat-option [value]="option" style="font-weight: 500;">{{option.name | titlecase}}&nbsp;
+                                    <div style="color: rgb(13, 93, 191); font-size: small; font-weight: 400;"> ({{option.parent_name | titlecase}}) </div>
+                                 </mat-option>
                                  }
                                  }
                               </mat-autocomplete>
@@ -64,7 +101,7 @@
                            <mat-form-field style="margin-top: 20px;">
                               <mat-label>Amount</mat-label>
                               <input matInput #amount type="number" formControlName="amount"
-                                 (blur)="checkBalanceAndAdd()" max="99999999.99" />
+                                 (blur)="checkBalanceAndAdd($index)" max="99999999.99" />
                            </mat-form-field>
 
                         </mat-grid-tile>
@@ -77,23 +114,72 @@
                      </mat-grid-list>
                   </mat-card>
                </div>
-               <div style="width: 45px; height: 45px; float: right;">
+               <div style="width: 45px; height: 45px; float: right; margin-top: 5px;">
+                  @if(entries.length > 1){
                   <button mat-icon-button type="button" (click)="removeEntry(entry.get('id')?.value)">
-                     <mat-icon>close</mat-icon>
+                     <mat-icon>delete</mat-icon>
                   </button>
+                  }
                </div>
                }
             </div>
+            </div>
 
-            <button matButton="" type="button" (click)="addEntry()">➕ Add Field</button>
+            <!-- <button matButton="" type="button" (click)="addEntry()">➕ Add Field</button>
             <button matButton="" type="button" [disabled]="!entryForm.valid || selectedDate == undefined  "
-               (click)="submit()">Submit</button>
+               (click)="submit()">Submit</button> -->
          </form>
-
-         <p>{{layout.appLayOut().XSmall?.colspan_6}}</p>
-         <p>Total Debit: {{ getTotals().totalDebit }} | Total Credit: {{ getTotals().totalCredit }}</p>
+         
+         <!-- <p>Total Debit: {{ getTotals().totalDebit }} | Total Credit: {{ getTotals().totalCredit }}</p> -->
 
       </mat-card-content>
 
    </mat-card>
+
 </div>
+
+
+   <mat-card class="summary-section">
+    <div class="summary-row">
+      <span class="summary-label">Total Debit:</span>
+      <span class="summary-value debit">{{ getTotals().totalDebit }}</span>
+    </div>
+    <div class="summary-row">
+      <span class="summary-label">Total Credit:</span>
+      <span class="summary-value credit">{{ getTotals().totalCredit }}</span>
+    </div>
+
+    <div class="action-buttons">
+    <button 
+      mat-raised-button 
+      color="primary" 
+      (click)="submit()"
+      [disabled]="!entryForm.valid || selectedDate == undefined  || getTotals().totalDebit !== getTotals().totalCredit"
+    >
+      <mat-icon>save</mat-icon>
+      Submit Entry
+    </button>
+</div>
+   </mat-card>
+  <!-- Summary Section -->
+  
+   
+    <!-- <div class="summary-row" [class.balanced]="isBalanced()" [class.unbalanced]="!isBalanced()">
+      <span class="summary-label">Difference:</span>
+      <span class="summary-value">{{ getDifference() | number:'1.2-2' }}</span>
+    </div>
+    <div class="balance-status" [class.balanced]="isBalanced()" [class.unbalanced]="!isBalanced()">
+      <mat-icon>{{ isBalanced() ? 'check_circle' : 'error' }}</mat-icon>
+      <span>{{ isBalanced() ? 'Balanced' : 'Not Balanced' }}</span>
+    </div> -->
+  
+
+  <!-- Action Buttons -->
+
+    <!-- <button mat-raised-button (click)="clearAll()" color="warn">
+      <mat-icon>clear</mat-icon>
+      Clear All
+    </button> -->
+   
+  <!-- </div>
+  </mat-card> -->
