--- a/Angular/accounting/src/styles.scss
+++ b/Angular/accounting/src/styles.scss
@@ -149,12 +149,7 @@ body {
     // disabled-input-text-placeholder-color: orange,
     // disabled-leading-icon-color: red,
     
-  ));
-
-  
-
-
- }
+  )); }
 
 
 
