--- a/Angular/accounting/src/app/app.html
+++ b/Angular/accounting/src/app/app.html
@@ -297,7 +297,7 @@
       </button>
       }
     </mat-toolbar>
-    <div style="height: calc(100% - 120px); margin-left: 5px; margin-right: 5px;">
+    <div style="height: calc(100% - 120px);">
     <router-outlet />
     </div>
   </mat-sidenav-content>
